--- a/data.html
+++ b/data.html
@@ -54,7 +54,27 @@ div.sourceCode
 @media screen {
 pre > code.sourceCode > span > a:first-child::before { text-decoration: underline; }
 }
-</style>
+/* CSS for citations */
+div.csl-bib-body { }
+div.csl-entry {
+  clear: both;
+  margin-bottom: 0em;
+}
+.hanging-indent div.csl-entry {
+  margin-left:2em;
+  text-indent:-2em;
+}
+div.csl-left-margin {
+  min-width:2em;
+  float:left;
+}
+div.csl-right-inline {
+  margin-left:2em;
+  padding-left:1em;
+}
+div.csl-indent {
+  margin-left: 2em;
+}</style>
 
 
 <script src="site_libs/quarto-nav/quarto-nav.js"></script>
@@ -259,10 +279,10 @@ window.Quarto = {
 
 <section id="տվյալագիտությունը-որպես-նոր-գիտություն" class="level2" data-number="3.1">
 <h2 data-number="3.1" class="anchored" data-anchor-id="տվյալագիտությունը-որպես-նոր-գիտություն"><span class="header-section-number">3.1</span> Տվյալագիտությունը որպես նոր գիտություն</h2>
-<p>Հիմնված է <span class="citation" data-cites="donoho201750">(<a href="references.html#ref-donoho201750" role="doc-biblioref"><strong>donoho201750?</strong></a>)</span> հոդվածի վրա։</p>
+<p>Հիմնված է <span class="citation" data-cites="donoho201750">Donoho (<a href="references.html#ref-donoho201750" role="doc-biblioref">2017</a>)</span> հոդվածի վրա։</p>
 <section id="նոր-գիտության-առաջացումը" class="level3" data-number="3.1.1">
 <h3 data-number="3.1.1" class="anchored" data-anchor-id="նոր-գիտության-առաջացումը"><span class="header-section-number">3.1.1</span> Նոր գիտության առաջացումը</h3>
-<p>Լայնորեն տարածում գտած ժամանակակից Տվյալագիտություն առարկան (Data Science) իր սկիզբն է առնում 1962թ․-ին Ջոն Թուկիի (John Tukey) հոդվածով <span class="citation" data-cites="tukey1962future">(<a href="references.html#ref-tukey1962future" role="doc-biblioref"><strong>tukey1962future?</strong></a>)</span>, որում նա կոչ էր անում ռեֆորմացիայի ենթարկել համալսարանական վիճակագրությունը և մատնացույց էր անում նոր գիտության առաջացումը, որի ուսումնասիրության առարկան տվյալներից սովորելն է կամ՝ տվյալների վերլուծությունը։ Տվյալագիտություն եզրույթը ավելի ուշ է ներմուծվել՝ Բիլլ Քլիվլենդի (Bill Clevelend) կողմից <span class="citation" data-cites="cleveland2001data">(<a href="references.html#ref-cleveland2001data" role="doc-biblioref"><strong>cleveland2001data?</strong></a>)</span>: Տվյալագիտության առաջացումը որպես գիտություն, որը զբաղվում է տվյալների հավաքագրմամբ և վերլուծմամբ, ստեղծում է բնական հարց թե ինչո՞վ է այն տարբերվում վիճակագրությունից, մանավանդ կիրառական վիճակագրությունից։ Կիրառական վիճակագրությունը իր ստեղծման օրերից զբաղվել է նման հարցերով և նոր գիտության առաջացման իմաստն անորոշ է։ Այս նորաստեղծ գիտությունը հաճախ ներկայացվում է որպես վիճակագրության և մեքենայական ուսուցման միավորում, որտեղ վերջինն իր հետ բերում է նաև մեծ տվյալների հետ աշխատելու գործիքակազմ։ Նման սահմանումը չի արտահայտում այն մտավոր նորարարությունը, որ ընկած է այս նոր գիտության հիմքում։ Քանզի գիտությունն առհասարակ շուտով վերածվելու է տվյալների որոնք կարելի է վերլուծել, տվյալագիտության բերած նորամուծությունը ոչ միայն տվյալների մեծ ծավալի հետ է կապված, այլ՝ առհասարակ գիտության մեջ տվյալների վերլուծության գիտական հետազոտությունների (scientific studies) առաջացմամբ։ Հետևաբար տվյալագիտության մեջ ցանկացած մեթոդական նորամուծություն իր ազդեցությունն է ունենալու առհասարակ գիտության զարգացման վրա։ Այսպիսով՝ տվյալագիտության առաջացումը նպաստել է փաստերի վրա հիմնված (evidence based) գիտության առաջացմանը։</p>
+<p>Լայնորեն տարածում գտած ժամանակակից Տվյալագիտություն առարկան (Data Science) իր սկիզբն է առնում 1962թ․-ին Ջոն Թուկիի (John Tukey) հոդվածով <span class="citation" data-cites="tukey1962future">(<a href="references.html#ref-tukey1962future" role="doc-biblioref">Tukey 1962</a>)</span>, որում նա կոչ էր անում ռեֆորմացիայի ենթարկել համալսարանական վիճակագրությունը և մատնացույց էր անում նոր գիտության առաջացումը, որի ուսումնասիրության առարկան տվյալներից սովորելն է կամ՝ տվյալների վերլուծությունը։ Տվյալագիտություն եզրույթը ավելի ուշ է ներմուծվել՝ Բիլլ Քլիվլենդի (Bill Clevelend) կողմից <span class="citation" data-cites="cleveland2001data">(<a href="references.html#ref-cleveland2001data" role="doc-biblioref">Cleveland 2001</a>)</span>: Տվյալագիտության առաջացումը որպես գիտություն, որը զբաղվում է տվյալների հավաքագրմամբ և վերլուծմամբ, ստեղծում է բնական հարց թե ինչո՞վ է այն տարբերվում վիճակագրությունից, մանավանդ կիրառական վիճակագրությունից։ Կիրառական վիճակագրությունը իր ստեղծման օրերից զբաղվել է նման հարցերով և նոր գիտության առաջացման իմաստն անորոշ է։ Այս նորաստեղծ գիտությունը հաճախ ներկայացվում է որպես վիճակագրության և մեքենայական ուսուցման միավորում, որտեղ վերջինն իր հետ բերում է նաև մեծ տվյալների հետ աշխատելու գործիքակազմ։ Նման սահմանումը չի արտահայտում այն մտավոր նորարարությունը, որ ընկած է այս նոր գիտության հիմքում։ Քանզի գիտությունն առհասարակ շուտով վերածվելու է տվյալների որոնք կարելի է վերլուծել, տվյալագիտության բերած նորամուծությունը ոչ միայն տվյալների մեծ ծավալի հետ է կապված, այլ՝ առհասարակ գիտության մեջ տվյալների վերլուծության գիտական հետազոտությունների (scientific studies) առաջացմամբ։ Հետևաբար տվյալագիտության մեջ ցանկացած մեթոդական նորամուծություն իր ազդեցությունն է ունենալու առհասարակ գիտության զարգացման վրա։ Այսպիսով՝ տվյալագիտության առաջացումը նպաստել է փաստերի վրա հիմնված (evidence based) գիտության առաջացմանը։</p>
 <p>Ինքը Թուկին իր ելակետային հոդվածում այսպես է ընդգծում տվյալագիտության և կիրառական վիճակագրության տարբերությունը. տվյալագիտությունը նոր գիտություն է, ոչ թե մաթեմատիկայի նոր ճյուղ։ Գիտություն համարվելու համար երեք բաղադրիչների առկայությունն է պարտադիր.</p>
 <ol type="1">
 <li>ինտելեկտուալ բովանդակությունը</li>
@@ -291,7 +311,7 @@ window.Quarto = {
 </section>
 <section id="մեքենայական-ուսուցման-հիմնական-պարադիգմը-ctf-the-common-task-framework" class="level4" data-number="3.1.2.3">
 <h4 data-number="3.1.2.3" class="anchored" data-anchor-id="մեքենայական-ուսուցման-հիմնական-պարադիգմը-ctf-the-common-task-framework"><span class="header-section-number">3.1.2.3</span> Մեքենայական ուսուցման հիմնական պարադիգմը՝ CTF (The Common Task Framework)</h4>
-<p>Կարդալ Section 6 - The Predictive Culture’s Secret Sauce <span class="citation" data-cites="donoho201750">(<a href="references.html#ref-donoho201750" role="doc-biblioref"><strong>donoho201750?</strong></a>)</span>:</p>
+<p>Կարդալ Section 6 - The Predictive Culture’s Secret Sauce <span class="citation" data-cites="donoho201750">(<a href="references.html#ref-donoho201750" role="doc-biblioref">Donoho 2017</a>)</span>:</p>
 </section>
 <section id="տվյալագիտության-ուսումնասիրության-ամբողջ-շրջանակը" class="level4" data-number="3.1.2.4">
 <h4 data-number="3.1.2.4" class="anchored" data-anchor-id="տվյալագիտության-ուսումնասիրության-ամբողջ-շրջանակը"><span class="header-section-number">3.1.2.4</span> Տվյալագիտության ուսումնասիրության ամբողջ շրջանակը</h4>
@@ -331,7 +351,7 @@ window.Quarto = {
 </section>
 <section id="sac" class="level2" data-number="3.2">
 <h2 data-number="3.2" class="anchored" data-anchor-id="sac"><span class="header-section-number">3.2</span> Split - Apply - Combine</h2>
-<p>Այս բաժնում ուսումնասիրելու ենք շրջապտույտի ֆունկցիաները՝ Loop Functions, որոնք օգտագործվում են կիրառելու համար բաժանել-կիրառել-միավորել մարտավարությունը՝ (Split-Apply-Combine): Այս մարտավարության նպատակն է բաժանել տվյալները ավելի փոքր մասերի, կիրառել տրված ֆունկցիան մասերի վրա և միավորել ստացված արդյունքները։ Ստորև Նկար @ref(fig:apply)-ում բերված աղյուսակն ամփոփ ներկայացնում է շրջապտույտի ֆունկցիաները։ Ձախ կողմում գրված տողերը ցույց են տալիս օբյեկտի տեսակը, որը փոխանցվում է ֆունկցիային, իսկ սյուները ցույց են տալիս ֆունկցիայի կողմից վերադարձվող օբյեկտի տեսակը։ Գունավորում ունեցող ֆունկցիաները <img src="images/Rlogo.png" class="img-fluid" style="width:0.2in" alt="R">-ում նախասահմանված ֆունկցիաներն են, իսկ սպիտակ ֆունկցիաները Հադլեյ Ուիքհեմի (Hadley Wickham) կողմից ստեղծված <strong>plyr</strong> գրադարանից են <span class="citation" data-cites="R-plyr">(<a href="references.html#ref-R-plyr" role="doc-biblioref"><strong>R-plyr?</strong></a>)</span>։</p>
+<p>Այս բաժնում ուսումնասիրելու ենք շրջապտույտի ֆունկցիաները՝ Loop Functions, որոնք օգտագործվում են կիրառելու համար բաժանել-կիրառել-միավորել մարտավարությունը՝ (Split-Apply-Combine): Այս մարտավարության նպատակն է բաժանել տվյալները ավելի փոքր մասերի, կիրառել տրված ֆունկցիան մասերի վրա և միավորել ստացված արդյունքները։ Ստորև Նկար @ref(fig:apply)-ում բերված աղյուսակն ամփոփ ներկայացնում է շրջապտույտի ֆունկցիաները։ Ձախ կողմում գրված տողերը ցույց են տալիս օբյեկտի տեսակը, որը փոխանցվում է ֆունկցիային, իսկ սյուները ցույց են տալիս ֆունկցիայի կողմից վերադարձվող օբյեկտի տեսակը։ Գունավորում ունեցող ֆունկցիաները <img src="images/Rlogo.png" class="img-fluid" style="width:0.2in" alt="R">-ում նախասահմանված ֆունկցիաներն են, իսկ սպիտակ ֆունկցիաները Հադլեյ Ուիքհեմի (Hadley Wickham) կողմից ստեղծված <strong>plyr</strong> գրադարանից են <span class="citation" data-cites="R-plyr">(<a href="references.html#ref-R-plyr" role="doc-biblioref">Wickham 2011</a>)</span>։</p>
 <div class="cell">
 <div class="cell-output-display">
 <div class="quarto-figure quarto-figure-center">
@@ -964,6 +984,20 @@ $z
 </div>
 
 
+<div id="refs" class="references csl-bib-body hanging-indent" data-entry-spacing="0" role="list" style="display: none">
+<div id="ref-cleveland2001data" class="csl-entry" role="listitem">
+Cleveland, William S. 2001. <span>“Data Science: An Action Plan for Expanding the Technical Areas of the Field of Statistics.”</span> <em>International Statistical Review</em> 69 (1): 21–26.
+</div>
+<div id="ref-donoho201750" class="csl-entry" role="listitem">
+Donoho, David. 2017. <span>“50 Years of Data Science.”</span> <em>Journal of Computational and Graphical Statistics</em> 26 (4): 745–66.
+</div>
+<div id="ref-tukey1962future" class="csl-entry" role="listitem">
+Tukey, John W. 1962. <span>“The Future of Data Analysis.”</span> In <em>Breakthroughs in Statistics: Methodology and Distribution</em>, 408–52. Springer.
+</div>
+<div id="ref-R-plyr" class="csl-entry" role="listitem">
+Wickham, Hadley. 2011. <span>“The Split-Apply-Combine Strategy for Data Analysis.”</span> <em>Journal of Statistical Software</em> 40 (1): 1–29. <a href="https://www.jstatsoft.org/v40/i01/">https://www.jstatsoft.org/v40/i01/</a>.
+</div>
+</div>
 </section>
 </section>
 
