--- a/references.html
+++ b/references.html
@@ -191,10 +191,35 @@ div.csl-indent {
 
 
 <div id="refs" class="references csl-bib-body hanging-indent" data-entry-spacing="0" role="list">
+<div id="ref-cleveland2001data" class="csl-entry" role="listitem">
+Cleveland, William S. 2001. <span>“Data Science: An Action Plan for
+Expanding the Technical Areas of the Field of Statistics.”</span>
+<em>International Statistical Review</em> 69 (1): 21–26.
+</div>
+<div id="ref-donoho201750" class="csl-entry" role="listitem">
+Donoho, David. 2017. <span>“50 Years of Data Science.”</span>
+<em>Journal of Computational and Graphical Statistics</em> 26 (4):
+745–66.
+</div>
 <div id="ref-ihaka1996r" class="csl-entry" role="listitem">
 Ihaka, Ross, and Robert Gentleman. 1996. <span>“R: A Language for Data
 Analysis and Graphics.”</span> <em>Journal of Computational and
 Graphical Statistics</em> 5 (3): 299–314.
+</div>
+<div id="ref-R" class="csl-entry" role="listitem">
+R Core Team. 2025. <em>R: A Language and Environment for Statistical
+Computing</em>. Vienna, Austria: R Foundation for Statistical Computing.
+<a href="https://www.R-project.org/">https://www.R-project.org/</a>.
+</div>
+<div id="ref-tukey1962future" class="csl-entry" role="listitem">
+Tukey, John W. 1962. <span>“The Future of Data Analysis.”</span> In
+<em>Breakthroughs in Statistics: Methodology and Distribution</em>,
+408–52. Springer.
+</div>
+<div id="ref-R-plyr" class="csl-entry" role="listitem">
+Wickham, Hadley. 2011. <span>“The Split-Apply-Combine Strategy for Data
+Analysis.”</span> <em>Journal of Statistical Software</em> 40 (1): 1–29.
+<a href="https://www.jstatsoft.org/v40/i01/">https://www.jstatsoft.org/v40/i01/</a>.
 </div>
 </div>
 
