--- a/intro.html
+++ b/intro.html
@@ -245,24 +245,13 @@ div.csl-indent {
 <h2 data-number="1.5" class="anchored" data-anchor-id="ամփոփում"><span class="header-section-number">1.5</span> Ամփոփում</h2>
 <ul>
 <li><p>CRAN</p></li>
-<li><p>Evidence based science</p></li>
-<li><p>Scientific studies</p></li>
-<li><p>Quantitative programming environment</p></li>
 <li><p>Code (տեքստային ծրագիր)</p></li>
 <li><p>Open source software</p></li>
-<li><p>Packages</p></li>
+<li><p>Base Packages</p></li>
 <li><p>Interactive programming</p></li>
 <li><p>Console mode</p></li>
 <li><p>Script mode</p></li>
 <li><p><img src="images/Rlogo.png" class="img-fluid" style="width:0.2in" alt="R"> version, nickname</p></li>
-<li><p>Package version</p></li>
-<li><p>Package documentation</p></li>
-<li><p>Statistical inference (Վիճակագրական եզրահանգումներ)</p></li>
-<li><p>Prediction (Կանխատեսում)</p></li>
-<li><p>CTF - The common task framework</p></li>
-<li><p>Data science, data scientist (Տվյալագիտություն, տվյալագետ)</p></li>
-<li><p>Graph (գծապատկեր)</p></li>
-<li><p>Visualization (Պատկերավորում, պատկերում, պատկերազարդում)</p></li>
 </ul>
 
 
